# minishell

./: CMakeLists.txt  Makefile  README.md  args.c  argtest  cmd.txt  libft.h  minishell  our  out  outsss
incl/: minishell.h
lib/: Makefile  bidule  ft_add_tab.c  ft_atoi.c  ft_atoi_bin.c  ft_bzero.c  ft_calloc.c  ft_free.c  ft_free_tab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_null_found.c  ft_print_char.c  ft_print_decimals.c  ft_print_hex.c  ft_print_pointer_hex.c  ft_print_pourcentage.c  ft_print_string.c  ft_printf.c  ft_putbase_fd.c  ft_putchar_fd.c  (+33 more)
src/: debug_print.c  header.h  main.c  test.c
src/builtins/: exit.c
src/clean_exit/: clean_exit.c
src/envp/empty_envp/: empty_envp.c
src/envp/env_to_str/: env_to_str.c
src/envp/envp_to_list/: envp_to_list.c  find_list_content.c  free_env.c
src/exec/: exec.c  exec_utils.c
src/exec/builtins/: print_builtin_error.c
src/exec/builtins/cd/: cd.c  cd_env_gestion.c
src/exec/builtins/echo/: echo.c
src/exec/builtins/env/: env_builtin.c
src/exec/builtins/exit/: exit.c
src/exec/builtins/export/: export.c  export_with_plus.c
src/exec/builtins/pwd/: pwd.c
src/exec/builtins/unset/: unset.c
src/exec/cmds/: cmds.c  free_cmds.c
src/exec/errors/: errors.c
src/exec/here_doc/: here_doc.c
src/exec/pipes/: child_bonus.c  error_bonus.c  pipes.c  pipes_dup.c  pipes_g_code.c  pipex_bonus.h
src/exec/redirections/: get_files.c  get_infile.c  get_outfile.c  here_doc.c  here_doc_env.c  redirections.c
src/execution/: execution.c
src/execution/builtins/: exit.c
src/execution/builtins/cd/: cd.c
src/execution/builtins/echo/: echo.c
src/linked_lists/: lstcreate.c
src/parsing/: parsing.c
src/parsing/cmd_free/: cmd_free.c
src/parsing/cmd_split/: add_node.c  add_to_char.c  empty_args.c  empty_env_errors.c  env_gestion.c  env_gestion2.c  env_gestion3.c  env_spaces.c  linked_list_gestion.c  split_shell.c  split_shell2.c  split_shell3.c  split_shell_state.c  split_shell_utils1.c  split_shell_utils2.c
src/parsing/errors/: errors.c  pipes.c  quotes_check.c  redirections.c  redirections2.c
src/prompt/: prompt.c
src/signals/: signals.c
