cmake_minimum_required(VERSION 3.24)
project(minishell C)

set(CMAKE_C_STANDARD 11 read.c)

include_directories(incl)
include_directories(lib)

add_executable(minishell
        incl/minishell.h
        lib/ft_atoi.c
        lib/ft_atoi_bin.c
        lib/ft_bzero.c
        lib/ft_calloc.c
        lib/ft_free_tab.c
        lib/ft_isalnum.c
        lib/ft_isalpha.c
        lib/ft_isascii.c
        lib/ft_isdigit.c
        lib/ft_isprint.c
        lib/ft_isspace.c
        lib/ft_itoa.c
        lib/ft_lstadd_back.c
        lib/ft_lstadd_front.c
        lib/ft_lstclear.c
        lib/ft_lstdelone.c
        lib/ft_lstiter.c
        lib/ft_lstlast.c
        lib/ft_lstmap.c
        lib/ft_lstnew.c
        lib/ft_lstsize.c
        lib/ft_memchr.c
        lib/ft_memcmp.c
        lib/ft_memcpy.c
        lib/ft_memmove.c
        lib/ft_memset.c
        lib/ft_null_found.c
        lib/ft_print_char.c
        lib/ft_print_decimals.c
        lib/ft_print_hex.c
        lib/ft_print_pointer_hex.c
        lib/ft_print_pourcentage.c
        lib/ft_print_string.c
        lib/ft_printf.c
        lib/ft_putbase_fd.c
        lib/ft_putchar_fd.c
        lib/ft_putchar_fd_printf.c
        lib/ft_putendl_fd.c
        lib/ft_putnbr_fd.c
        lib/ft_putnbr_fd_printf.c
        lib/ft_putstr_fd.c
        lib/ft_putstr_fd_printf.c
        lib/ft_sizeof_nb_base.c
        lib/ft_split.c
        lib/ft_strcat.c
        lib/ft_strchr.c
        lib/ft_strdup.c
        lib/ft_striteri.c
        lib/ft_strjoin.c
        lib/ft_strjoin_free.c
        lib/ft_strjoin_free_char.c
        lib/ft_strlcat.c
        lib/ft_strlcpy.c
        lib/ft_strlen.c
        lib/ft_strlen_printf.c
        lib/ft_strmapi.c
        lib/ft_strncat.c
        lib/ft_strncmp.c
        lib/ft_strncpy.c
        lib/ft_strnstr.c
        lib/ft_strrchr.c
        lib/ft_strstr.c
        lib/ft_strtrim.c
        lib/ft_substr.c
        lib/ft_tolower.c
        lib/ft_toupper.c
        lib/get_next_line.c
        lib/get_next_line_utils.c
        lib/libft.h
        src/clean_exit/clean_exit.c
        src/envp/env_to_str/env_to_str.c
        src/envp/envp_to_list/envp_to_list.c
        src/envp/envp_to_list/find_list_content.c
        src/envp/envp_to_list/free_env.c
        src/exec/builtins/cd/cd.c
        src/exec/builtins/echo/echo.c
        src/exec/builtins/env/env_builtin.c
        src/exec/builtins/exit/exit.c
        src/exec/builtins/export/export.c
        src/exec/builtins/pwd/pwd.c
        src/exec/builtins/unset/unset.c
        src/exec/builtins/print_builtin_error.c
        src/exec/cmds/cmds.c
        src/exec/pipes/pipes.c
        src/exec/pipes/pipes_dup.c
        src/exec/redirections/redirections.c
        src/exec/exec.c
        src/exec/exec_utils.c
        src/linked_lists/lstcreate.c
        src/parsing/cmd_split/split_shell.c
        src/parsing/cmd_split/split_shell_utils1.c
        src/parsing/parsing.c
        src/prompt/prompt.c
        src/debug_print.c
        src/main.c
        src/test.c src/parsing/errors/redirections.c src/parsing/errors/quotes_check.c src/parsing/errors/pipes.c src/parsing/errors/errors.c src/parsing/cmd_split/empty_args.c src/parsing/cmd_split/env_gestion.c src/parsing/cmd_split/env_gestion2.c src/parsing/cmd_split/env_gestion3.c src/parsing/cmd_split/env_spaces.c src/parsing/cmd_split/split_shell2.c src/parsing/cmd_split/split_shell_state.c src/parsing/cmd_split/split_shell_utils2.c src/parsing/cmd_free/cmd_free.c src/exec/errors/errors.c src/signals/signals.c)

target_link_libraries(minishell /usr/lib/x86_64-linux-gnu/libreadline.so)